--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./input.css -o ./css/main.css",
+    "build": "tailwindcss -i ./input.css -o ./css/main.css && cp index.html dist/index.html",
     "watch": "tailwindcss -i ./input.css -o ./css/main.css --watch",
-    "start": "serve ."
+    "start": "serve dist"
   },
   "keywords": [],
   "author": "",
