--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./input.css -o ./css/main.css && cp index.html dist/index.html",
-    "watch": "tailwindcss -i ./input.css -o ./css/main.css --watch",
+    "build": "mkdir -p dist/css && tailwindcss -i ./input.css -o ./dist/css/main.css && cp index.html dist/index.html",
+    "watch": "mkdir -p dist/css && tailwindcss -i ./input.css -o ./dist/css/main.css --watch",
     "start": "serve dist"
   },
   "keywords": [],
